<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="409dp"
    android:layout_height="800dp"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="241dp">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".FaqActivity">

        <View
            android:id="@+id/view_u"
            android:layout_width="411dp"
            android:layout_height="240dp"
            android:background="@drawable/shape_1"
            android:backgroundTint="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/img1"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:contentDescription="@string/faqimage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.938"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view_u"
            app:layout_constraintVertical_bias="0.05"
            app:srcCompat="@drawable/faqs" />


        <TextView
            android:id="@+id/camera_output"
            android:layout_width="345dp"
            android:layout_height="53dp"
            android:layout_marginBottom="480dp"
            android:background="@drawable/radius"
            android:padding="5dp"
            android:text="@string/what_are_the_options_available_in_the_sign_master_application"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.359"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="344dp"
            android:layout_height="114dp"
            android:layout_marginBottom="356dp"
            android:background="@drawable/rectangle_shape"
            android:text="@string/our_application_has_mainly_four_features_they_are_open_camera_upload_image_sign_dictionary_and_help_page_which_helps_the_users_to_contact_via_whatsapp_and_gmail"
            android:textColor="@color/purple_200"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.353"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="345dp"
            android:layout_height="53dp"
            android:background="@drawable/radius"
            android:text="@string/is_it_paid_or_open_source"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.375"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.67"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="345dp"
            android:layout_height="53dp"
            android:background="@drawable/rectangle_shape"
            android:text="@string/it_is_a_fully_free_mobile_app_and_usable_by_anyone"
            android:textColor="@color/purple_200"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.375"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.76"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/help_desc"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:fontFamily="sans-serif"
            android:text="@string/ask_your_questions2"
            android:textAllCaps="false"
            android:textColor="@color/purple_200"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.121"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view_u"
            app:layout_constraintVertical_bias="0.189" />

        <ImageButton
            android:id="@+id/bk_btn_dic2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/todo6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.062"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.034"
            app:srcCompat="?attr/actionModeCloseDrawable"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="F A Qs"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.129" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>