<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="409dp"
    android:layout_height="729dp"
    tools:ignore="SpeakableTextPresentCheck"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="800dp"
        tools:context=".dictionary">

        <View
            android:id="@+id/view_d"
            android:layout_width="411dp"
            android:layout_height="0dp"
            android:layout_marginBottom="451dp"
            android:background="@drawable/shape_1"
            android:backgroundTint="#000000"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/image2"
            android:src="@drawable/finish"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/image2"
            android:src="@drawable/how"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.074"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView9"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginEnd="44dp"
            android:layout_marginBottom="300dp"
            android:contentDescription="@string/image2"
            android:src="@drawable/hard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView14"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:layout_constraintVertical_bias="0.8" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginTop="244dp"
            android:contentDescription="@string/image3"
            android:src="@drawable/love"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.336"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginTop="244dp"
            android:contentDescription="@string/image2"
            android:src="@drawable/play"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/view_d" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginTop="244dp"
            android:contentDescription="@string/image1"
            android:src="@drawable/teach"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginTop="244dp"
            android:contentDescription="@string/image4"
            android:src="@drawable/talk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.861"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view_d" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/image4"
            android:src="@drawable/know"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/image4"
            android:src="@drawable/tired"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:contentDescription="@string/image4"
            android:src="@drawable/no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.186"
            app:layout_constraintStart_toEndOf="@+id/imageView12"
            app:layout_constraintTop_toBottomOf="@+id/imageView10"
            app:layout_constraintVertical_bias="0.055" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:contentDescription="@string/image4"
            android:src="@drawable/yes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toEndOf="@+id/imageView11"
            app:layout_constraintTop_toBottomOf="@+id/imageView14"
            app:layout_constraintVertical_bias="0.055" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="36dp"
            android:contentDescription="@string/dict_icon"
            android:src="@drawable/dictionary_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.907"
            app:layout_constraintStart_toStartOf="@+id/view_d"
            app:layout_constraintTop_toTopOf="@+id/view_d" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="131dp"
            android:layout_height="35dp"
            android:text="@string/dictionary"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/view_d"
            app:layout_constraintEnd_toEndOf="@+id/view_d"
            app:layout_constraintHorizontal_bias="0.196"
            app:layout_constraintStart_toStartOf="@+id/view_d"
            app:layout_constraintTop_toTopOf="@+id/view_d"
            app:layout_constraintVertical_bias="0.563" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_d" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
